--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,10 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-*{
 
-  font-family: 'Roboto', sans-serif;
-}
-
-body{
-  margin: 0;
-  padding: 0;
-}
+$color-red: #E60000;
+$border-red: #FF0000;
