--- a/src/app/01.UserList/UserList.scss
+++ b/src/app/01.UserList/UserList.scss
@@ -2,6 +2,10 @@
     text-align: center;
     width: 100%;
     margin: auto;
+    .user-list-card{
+
+    }
+
     .logo-page {
         width: 400px;
         height: 400px;
